--- a/app/src/main/res/color/nav_item_colors.xml
+++ b/app/src/main/res/color/nav_item_colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#6200EE" android:state_checked="true" />
-    <item android:color="#757575" android:state_checked="false" />
+
+    <item android:color="?attr/colorPrimary" android:state_checked="true" />
+
+    <item android:color="?android:attr/textColorSecondary" />
+
 </selector>
