--- a/app/src/main/res/layout/activity_full_screen_image.xml
+++ b/app/src/main/res/layout/activity_full_screen_image.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
-        app:tint="?android:attr/textColorPrimary" />
+        android:paddingTop="26dp"
+        app:tint="@android:color/background_dark" />
 
 </RelativeLayout>
