--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,12 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.UniVerse" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/purple_200</item> <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item> <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/black</item>
+
+        <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
 
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
-        <item name="android:colorBackground">#121212</item> <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorSecondary">#B0B0B0</item> </style>
+        <item name="android:colorBackground">#121212</item>
+        <item name="android:textColorPrimary">@color/white</item>
+
+        <item name="android:textColorSecondary">@color/text_secondary</item>
+    </style>
 </resources>
