--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,7 @@
 
         <item name="android:colorBackground">@color/white</item>
         <item name="android:textColorPrimary">@color/black</item>
-        <item name="android:textColorSecondary">#757575</item> </style>
+
+        <item name="android:textColorSecondary">@color/text_secondary</item>
+    </style>
 </resources>
