--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,9 +17,12 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:paddingTop="30dp"
-            android:background="?android:attr/colorBackground">
+            android:background="?android:attr/colorBackground"
+
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="30dp">
 
             <TextView
                 android:layout_width="wrap_content"
