post e comentarios, agora têm a opção para editar e apagar, e enviar photo no comentario foi corrigido também

--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -180,7 +180,7 @@
                 android:id="@+id/btnSendComment"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@android:drawable/ic_menu_send"
+                android:src="@drawable/ic_send"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 app:tint="?attr/colorPrimary"/>
         </LinearLayout>
