update no sistema de follow

--- a/app/src/main/res/layout/activity_public_profile.xml
+++ b/app/src/main/res/layout/activity_public_profile.xml
@@ -111,7 +111,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Seguidores"
-                    android:textColor="?android:attr/textColorSecondary"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:textSize="12sp"/>
             </LinearLayout>
 
@@ -132,7 +132,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="A Seguir"
-                    android:textColor="?android:attr/textColorSecondary"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:textSize="12sp"/>
             </LinearLayout>
         </LinearLayout>
