--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -60,8 +60,8 @@
                 android:id="@+id/profileAvatar"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/circle_bg"
-                android:background="@drawable/circle_bg"
+                android:src="@drawable/ic_person_filled"
+                android:background="@drawable/ic_person_filled"
                 android:scaleType="centerCrop"
                 android:padding="2dp"
                 android:layout_marginBottom="16dp" />
