--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -36,9 +36,9 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="12dp"
-            android:background="@drawable/circle_bg"
             android:scaleType="centerCrop"
-            android:src="@drawable/circle_bg" />
+            android:background="@drawable/ic_person_filled"
+            android:src="@drawable/ic_person_filled" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -138,7 +138,6 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@android:drawable/ic_menu_close_clear_cancel"
-                android:background="@drawable/circle_bg"
                 android:backgroundTint="#D32F2F"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
