--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -91,6 +91,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_person_filled"
+            android:background="@drawable/ic_person_filled"
             android:layout_marginEnd="16dp"
             android:alpha="0.8"
             app:tint="?android:attr/textColorPrimary"/>
