--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -12,6 +12,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_person_filled"
+        android:background="@drawable/ic_person_filled"
         android:scaleType="centerCrop"
         android:layout_marginEnd="12dp"/>
 
