--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -38,8 +38,8 @@
                 android:id="@+id/postProfileImage"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/circle_bg"
-                android:background="@drawable/circle_bg"
+                android:src="@drawable/ic_person_filled"
+                android:background="@drawable/ic_person_filled"
                 android:scaleType="centerCrop"
                 android:layout_marginEnd="12dp"
                 android:contentDescription="Avatar"/>
