--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -24,7 +24,8 @@
             android:id="@+id/searchAvatar"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:src="@drawable/circle_bg"
+            android:src="@drawable/ic_person_filled"
+            android:background="@drawable/ic_person_filled"
             android:scaleType="centerCrop"
             android:layout_marginEnd="16dp"/>
 
